Set up correction in badge new left position to 70% in version mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ img {
   align-items: center;
   position: relative;
   top: -70%;
-  left: 20%;
+  left: 70%;
 }
 
 .fa-location-dot {
